SubVersion: $Id$
	
Log:

- 17/09/2007, version 1.0.8: roms
	- fixed full screen copy with Titanium
	- fixed displaying of full path with Titanium/USB
	- fixed sending of FLASH apps on TI73
	- fixed sending of FLASH apps on non-SE (bug introduced in rev. 3291)

- 17/06/2007, version 1.0.7: roms
	- fixed bug in ticalcs_dirlist_destroy: don't free TreeInfo when tree has no folder
	- replaced malloc/free by g_malloc/g_free
	- replaced TNode by GNode as provided by GLib
	- changed args for ticalcs_dirlist_ve_exist, otherwise this function is buggy 
		with TI8x varnames (like lists due to presence of the '\' character)
	- fixed bug in ticalcs_dirlist_ve_add when no folder exists yet
	- added permanent TI83+/TI84+/83/86 variables to dirlist (Window Settings and others)
	- updated to follow ticonv API changes
	- USB hand-helds: fixed size of attribute array (usually smaller than needed).

- 12/04/2007, version 1.0.6: roms
	- wrong battery status (debug)
	- no clock in TI83+ (SE); no clock in TI84+, too (not handled yet)
	- bug #1563667: impossible to flash TI-83+/SE

- 23/02/2007, version 1.0.5: roms
	- enabled i18n
	- fixed TiEmu bug #1675675 / TiLP bug #1676133

- 18/02/2007, version 1.0.4: roms
	- added a new CalcFncts function entry: can execute a program remotely
	- added/fixed arrays for TI73,TI83+ and TI86 keys (needed by remote exec)
	- fixed bug #1657175: small program (309 bytes) are rejected by D-USB because too
		small. Ti-Connect re-negotiate packet size to a smaller value before sending
		variable contents.

- 02/02/2007, version 1.0.3: roms
	- Kevin discovered a new D-USB command (0x11) which is related to remote control!
	- DirectLink remote control support implemented for Titanium
	- rom dumping is now remote controlled
	- 89/92/92+: set to HOME screen before sending dumping program
	- fixed "Conditional jump or move depends on uninitialised value(s)" bug (kevin)
	- fixed remote keys for TI84+/USB (little-endian)

- 12/11/2006, version 1.0.2: roms