@@ -7,6 +7,8 @@ Log:
 	- fixed displaying of full path with Titanium/USB
 	- fixed sending of FLASH apps on TI73
 	- fixed sending of FLASH apps on non-SE (bug introduced in rev. 3291)
+	- fixed progress bar update for backup & tigroup receiving
+	- don't break USB communication if ROM dumping has been canceled
 
 - 17/06/2007, version 1.0.7: roms
 	- fixed bug in ticalcs_dirlist_destroy: don't free TreeInfo when tree has no folder
